--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -21,5 +23,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@total-typescript/ts-reset": "^0.3.7"
   }
 }
