--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,37 +1,28 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "Next.js: debug server-side",
+            "type": "node-terminal",
             "request": "launch",
-            "name": "dev - API",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "runtimeExecutable": "npm",
-            "runtimeArgs": [
-                "run",
-                "dev"
-            ]
+            "command": "npm run dev"
         },
         {
-            "name": "Launch Frontend",
-            "request": "launch",
+            "name": "Next.js: debug client-side",
             "type": "msedge",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/pages"
-        }
-    ],
-    "compounds": [
+            "request": "launch",
+            "url": "http://localhost:3000"
+        },
         {
-            "name": "dev",
-            "configurations": [
-                "dev - API",
-                "Launch Frontend"
-            ]
+            "name": "Next.js: debug full stack",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "npm run dev",
+            "serverReadyAction": {
+                "pattern": "started server on .+, url: (https?://.+)",
+                "uriFormat": "%s",
+                "action": "debugWithEdge"
+            }
         }
     ]
 }
