--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "clsx": "^1.2.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "prisma": "^4.10.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@total-typescript/ts-reset": "^0.3.7"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@total-typescript/ts-reset": "^0.3.7",
+    "@types/node": "18.14.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "jest": "^29.4.3",
+    "jest-css-modules-transform": "^4.4.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "4.9.5"
   }
 }
