--- a/package.json
+++ b/package.json
@@ -12,25 +12,35 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "clsx": "^1.2.1",
     "next": "13.1.6",
     "prisma": "^4.10.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@total-typescript/ts-reset": "^0.3.7",
+    "@types/jest-in-case": "^1.0.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-testing-library": "^5.10.2",
     "jest": "^29.4.3",
     "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-in-case": "^1.0.2",
     "ts-jest": "^29.0.5",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   }
 }
