--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "clsx": "^1.2.1",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
