--- a/package.json
+++ b/package.json
@@ -10,27 +10,47 @@
     "test": "jest"
   },
   "dependencies": {
+    "@keyvhq/core": "^1.6.26",
+    "@keyvhq/postgres": "^1.6.28",
+    "@maxmind/geoip2-node": "^3.5.0",
     "@next/font": "13.1.6",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "@resvg/resvg-js": "^2.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
+    "cors": "^2.8.5",
+    "maxmind": "^4.3.8",
     "next": "13.1.6",
+    "next-api-decorators": "^2.0.2",
     "next-redux-wrapper": "^8.1.0",
+    "path-to-regexp": "^6.2.1",
     "prisma": "^4.10.1",
+    "public-ip": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
+    "request-ip": "^3.3.0",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@total-typescript/ts-reset": "^0.3.7",
+    "@types/cookie": "^0.5.1",
+    "@types/cors": "^2.8.13",
+    "@types/geoip-lite": "^1.4.1",
     "@types/jest-in-case": "^1.0.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.34.0",
@@ -41,7 +61,15 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.4.3",
     "jest-in-case": "^1.0.2",
+    "next-test-api-route-handler": "^3.1.8",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "babel": {
+    "env": {
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs"
+      ]
+    }
   }
 }
