--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   ],
   "parser": "@typescript-eslint/parser",
   "ignorePatterns": [
-    "jest.config.js"
+    "jest.config.js",
+    "next.config.js"
   ],
   "parserOptions": {
     "project": [
