Add "@welldone-software/why-did-you-render" package and update Next config to conditionally enable bundle analyzer

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "maxmind": "^4.3.8",
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
-    "next-compose-plugins": "^2.2.1",
     "next-redux-wrapper": "^8.1.0",
     "path-to-regexp": "^6.2.1",
     "prisma": "^4.10.1",
@@ -59,6 +58,7 @@
     "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
