--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@babel/plugin-syntax-decorators": "^7.21.0",
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@next/env": "^13.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
