--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "isomorphic-fetch": "^3.0.0",
-    "level": "^8.0.0",
     "maxmind": "^4.3.8",
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
@@ -38,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
+    "redis": "^4.6.5",
     "request-ip": "^3.3.0",
     "svg-captcha": "^1.4.0",
     "web-vitals": "^3.1.1"
