--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,8 +28,9 @@
             "type": "node",
             "name": "vscode-jest-tests.v2",
             "request": "launch",
-            "program": "${workspaceFolder}/node_modules/.bin/jest",
             "args": [
+                "test",
+                "--",
                 "--runInBand",
                 "--watchAll=false",
                 "--testNamePattern",
@@ -41,9 +42,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
-            "windows": {
-                "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-            }
+            "runtimeExecutable": "npm"
         }
     ]
 }
