--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@keyvhq/core": "^1.6.26",
@@ -52,6 +52,7 @@
     "@types/cookie": "^0.5.1",
     "@types/cors": "^2.8.13",
     "@types/geoip-lite": "^1.4.1",
+    "@types/jest": "^29.5.0",
     "@types/jest-in-case": "^1.0.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -65,9 +66,9 @@
     "eslint-config-next": "13.1.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.10.2",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "jest-css-modules-transform": "^4.4.2",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
     "ts-jest": "^29.0.5",
