chore: fix DB_URL

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DBHOST=localhost
 DBPORT=5432
-DBUSER="Adnan Ahmed Khan"
-DBPASSWORD=
+DBUSER=postgres
+DBPASSWORD=postgres
 DATABASE=hashcrack
-CAPTCHA_DATABASE=hashcrack_captcha
-GEO_DATABASE=hashcrack_geo
 
-CAPTCHA_DB_URL="postgresql://${DBUSER}:${DBPASSWORD}@${DBHOST}:5432/${CAPTCHA_DATABASE}"
-GEO_DB_URL="postgresql://${DBUSER}:${DBPASSWORD}@${DBHOST}:5432/${GEO_DATABASE}"
+DB_URL=postgresql://${DBUSER}:${DBPASSWORD}@${DBHOST}:5432/${DATABASE}
