--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,6 @@ DBHOST=localhost
 DBPORT=5432
 DBUSER=postgres
 DBPASSWORD=postgres
-DATABASE=hashcrack
+DATABASE=crackq.me
 
 DB_URL=postgresql://${DBUSER}:${DBPASSWORD}@${DBHOST}:5432/${DATABASE}
