--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@next/bundle-analyzer": "^13.2.4",
     "@next/font": "13.1.6",
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -61,6 +61,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
     "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
