--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
     "next-redux-wrapper": "^8.1.0",
+    "next-themes": "^0.2.1",
     "path-to-regexp": "^6.2.1",
     "prisma": "^4.10.1",
     "public-ip": "^6.0.1",
