--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prisma": "^4.10.1",
     "public-ip": "^6.0.1",
     "react": "18.2.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
