--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
     "test": "jest --watch"
   },
   "dependencies": {
@@ -26,6 +28,7 @@
     "cors": "^2.8.5",
     "isomorphic-fetch": "^3.0.0",
     "maxmind": "^4.3.8",
+    "msw": "^1.2.1",
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
     "next-redux-wrapper": "^8.1.0",
