--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
+    "animejs": "^3.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "clsx": "^1.2.1",
