--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@total-typescript/ts-reset": "^0.3.7",
+    "@types/animejs": "^3.1.7",
     "@types/cookie": "^0.5.1",
     "@types/cors": "^2.8.13",
     "@types/geoip-lite": "^1.4.1",
