--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public",
     "test": "jest --watch"
   },
   "dependencies": {
@@ -17,7 +15,6 @@
     "@maxmind/geoip2-node": "^3.5.0",
     "@next/bundle-analyzer": "^13.2.4",
     "@next/font": "13.1.6",
-    "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
     "animejs": "^3.2.1",
@@ -29,6 +26,7 @@
     "cors": "^2.8.5",
     "isomorphic-fetch": "^3.0.0",
     "maxmind": "^4.3.8",
+    "modern-normalize": "^1.1.0",
     "msw": "^1.2.1",
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
