--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
+    "stylelint": "^15.6.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-webpack-plugin": "^4.1.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
