--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "cross-env ANALYZE=true next build",
     "start": "next start",
+    "story": "npx ladle serve",
     "lint": "next lint",
     "test": "jest --watch"
   },
