--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,14 @@
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
       "runtimeExecutable": "npm"
+    },
+    {
+      "name": "Launch Storybook",
+      "runtimeArgs": ["run", "story"],
+      "runtimeExecutable": "npm",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
     }
   ]
 }
