--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-config-next": "13.1.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.10.2",
+    "inter-ui": "^3.19.3",
     "jest": "^29.5.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.5.0",
