--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/animejs": "^3.1.7",
     "@types/cookie": "^0.5.1",
     "@types/cors": "^2.8.13",
+    "@types/d3-scale": "^4.0.3",
     "@types/geoip-lite": "^1.4.1",
     "@types/jest": "^29.5.0",
     "@types/jest-in-case": "^1.0.6",
