--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "request-ip": "^3.3.0",
+    "sass": "^1.62.1",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
