--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "next-test-api-route-handler": "^3.1.8",
     "stylelint": "^15.6.0",
     "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-webpack-plugin": "^4.1.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
