--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cross-env ANALYZE=true next build",
     "start": "next start",
     "story": "npx ladle serve",
-    "lint": "next lint",
+    "lint": "STORY=true next lint",
     "test": "jest --watch"
   },
   "dependencies": {
@@ -53,6 +53,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@ladle/react": "^2.12.2",
     "@next/env": "^13.3.0",
+    "@svgr/webpack": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -89,7 +90,8 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-webpack-plugin": "^4.1.1",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "babel": {}
 }
