--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "msw": "^1.2.1",
     "next": "13.1.6",
     "next-api-decorators": "^2.0.2",
+    "next-images": "^1.8.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.2.1",
     "path-to-regexp": "^6.2.1",
