--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
@@ -84,10 +85,13 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
+    "postcss": "^8.4.23",
     "stylelint": "^15.6.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "stylelint-webpack-plugin": "^4.1.1",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
     "vite-plugin-svgr": "^2.4.0"
