--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "stylelint-config-standard",
+    "stylelint-config-recommended",
+    "stylelint-config-tailwindcss",
     "stylelint-config-standard-scss"
   ],
   "rules": {
@@ -19,7 +20,15 @@
     "declaration-block-no-shorthand-property-overrides": null,
     "scss/double-slash-comment-empty-line-before": null,
     "scss/at-if-closing-brace-newline-after": null,
-    "scss/at-if-closing-brace-space-after": null
+    "scss/at-if-closing-brace-space-after": null,
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "tailwind"
+        ]
+      }
+    ]
   },
   "overrides": []
 }
