--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "csstype": "^3.1.2",
     "d3-scale": "^4.0.2",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "isomorphic-fetch": "^3.0.0",
     "maxmind": "^4.3.8",
     "modern-normalize": "^1.1.0",
