allow editor string suggestions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,10 @@
   "editor.formatOnSave": true,
   "stylelint.configFile": ".stylelintrc.json",
   "prettier.enable": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+
   "files.associations": {
     "*.css": "tailwindcss"
   },
