--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prisma": "^4.10.1",
     "public-ip": "^6.0.1",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
