--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
   "eslint.enable": true,
-  "eslint.codeActionsOnSave.mode": "problems",
+
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": ["javascript", "typescript"],
   "editor.formatOnSave": true,
   "stylelint.configFile": ".stylelintrc.json",
   "prettier.enable": true,
+  "prettier.singleQuote": false,
   "editor.quickSuggestions": {
     "strings": true
   },
