--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
+    "react-obfuscate": "^3.6.9",
     "react-redux": "^8.0.5",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
