fix(tsconfig): move typings to fist root of types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ESNext",
     "typeRoots": [
+      "typings",
       "node_modules",
-      "typings"
     ],
     "lib": [
       "dom",
