--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hot-toast": "^2.4.0",
     "react-obfuscate": "^3.6.9",
     "react-redux": "^8.0.5",
+    "react-super-responsive-table": "^5.2.1",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "web-vitals": "^3.1.1"
