--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "stylelint-webpack-plugin": "^4.1.1",
+    "tailwind-utopia": "github:domchristie/tailwind-utopia",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
