--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,15 @@
     "next/core-web-vitals"
   ],
   "parser": "@typescript-eslint/parser",
-  "ignorePatterns": ["jest.config.js", "next.config.js", "tailwind.config.js"],
+  "ignorePatterns": [
+    "jest.config.js",
+    "next.config.js",
+    "tailwind.config.js",
+    "tailwind-workspace-preset.js"
+  ],
   "parserOptions": {
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   }
 }
