--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "cross-env ANALYZE=true next build",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:tailwind": "npx tailwindcss -i ./styles/_common.css -o ./styles/dist/tailwind.css --watch",
+    "dev:run": "next dev",
+    "build": "npm-run-all build:*",
+    "build:tailwind": "npx tailwindcss -i ./styles/_common.css -o ./styles/dist/tailwind.css",
+    "build:run": "cross-env ANALYZE=true next build",
     "start": "next start",
     "story": "npx ladle serve",
     "lint": "STORY=true next lint",
@@ -91,6 +95,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "stylelint": "^15.6.0",
     "stylelint-config-standard": "^33.0.0",
