--- a/package.json
+++ b/package.json
@@ -86,8 +86,10 @@
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-tailwindcss": "^3.12.0",
     "eslint-plugin-testing-library": "^5.10.2",
     "inter-ui": "^3.19.3",
     "jest": "^29.5.0",
@@ -97,6 +99,7 @@
     "next-test-api-route-handler": "^3.1.8",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "stylelint": "^15.6.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
