--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "typeRoots": [
-      "./node_modules/@types",
-      "typings"
+      "./node_modules/@types"
     ],
     "lib": [
       "dom",
