--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-hot-toast": "^2.4.0",
     "react-obfuscate": "^3.6.9",
     "react-redux": "^8.0.5",
+    "react-select-search": "^4.1.6",
     "react-super-responsive-table": "^5.2.1",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
