--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
+    "dev": "cross-env NODE_OPTIONS='--inspect' npm-run-all --parallel dev:*",
     "dev:tailwind": "npx tailwindcss -i ./styles/_common.css -o ./styles/dist/tailwind.css",
     "dev:run": "next dev",
     "build": "npm-run-all build:*",
