--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
     },
     {
       "name": "Next.js: debug client-side",
-      "type": "chrome",
+      "runtimeExecutable": "firefox",
       "request": "launch",
       "url": "http://localhost:3000"
     },
@@ -21,7 +21,7 @@
       "serverReadyAction": {
         "pattern": "started server on .+, url: (https?://.+)",
         "uriFormat": "%s",
-        "action": "debugWithEdge"
+        "action": "openExternally"
       }
     },
     {
