--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@maxmind/geoip2-node": "^3.5.0",
     "@next/bundle-analyzer": "^13.2.4",
     "@next/font": "13.1.6",
+    "@patternfly-labs/react-form-wizard": "^1.24.0",
+    "@patternfly/react-core": "^4.276.8",
+    "@patternfly/react-styles": "^4.92.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
     "animejs": "^3.2.1",
