--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
   "eslint.enable": true,
-
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "eslint.validate": ["javascript", "typescript"],
+  "eslint.validate": [
+    "javascript",
+    "typescript"
+  ],
   "editor.formatOnSave": true,
   "stylelint.configFile": ".stylelintrc.json",
-  "prettier.singleQuote": false,
   "prettier.enable": true,
   "prettier.singleQuote": false,
   "editor.quickSuggestions": {
