--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@patternfly-labs/react-form-wizard": "^1.24.0",
     "@patternfly/react-core": "^4.276.8",
     "@patternfly/react-styles": "^4.92.6",
+    "@patternfly/react-table": "^4.113.0",
+    "@react-hook/resize-observer": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
     "animejs": "^3.2.1",
@@ -101,6 +103,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
+    "next-transpile-modules": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier-plugin-tailwindcss": "^0.3.0",
