--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "next start",
     "story": "npx ladle serve",
     "lint": "STORY=true next lint",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "@kodingdotninja/use-tailwind-breakpoint": "^0.0.5",
@@ -86,6 +86,7 @@
     "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "18.2.4",
     "@types/react-redux": "^7.1.25",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/request-ip": "^0.0.37",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
@@ -108,6 +109,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-test-renderer": "^18.2.0",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
