--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^8.0.5",
     "react-select-search": "^4.1.6",
     "react-super-responsive-table": "^5.2.1",
+    "react-tether": "^3.0.1",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "web-vitals": "^3.3.1"
