--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@kodingdotninja/use-tailwind-breakpoint": "^0.0.5",
     "@marsidev/react-turnstile": "^0.2.1",
     "@maxmind/geoip2-node": "^4.0.0",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@next/bundle-analyzer": "^13.4.4",
     "@next/font": "13.4.4",
     "@patternfly-labs/react-form-wizard": "^1.24.0",
