--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "@types/request-ip": "^0.0.37",
+    "@types/tether": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@welldone-software/why-did-you-render": "^7.0.1",
