--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,18 @@
 {
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ],
-    "pluginSearchDirs": false
+    "plugins": [],
+    "pluginSearchDirs": false,
+    "organizeImportsSkipDestructiveCodeActions": true,
+    "semi": true,
+    "useTabs": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "bracketSameLine": true,
+    "endOfLine": "lf",
+    "quoteProps": "as-needed",
+    "arrowParens": "always",
+    "printWidth": 999999,
+    "htmlWhitespaceSensitivity": "ignore",
+    "singleAttributePerLine": false
 }
