--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "next-transpile-modules": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react-test-renderer": "^18.2.0",
     "stylelint": "^15.6.2",
