--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "isomorphic-fetch": "^3.0.0",
+    "kaitai-struct": "^0.10.0",
     "maxmind": "^4.3.11",
     "modern-normalize": "^2.0.0",
     "msw": "^1.2.1",
