--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-select-search": "^4.1.6",
     "react-super-responsive-table": "^5.2.1",
     "react-tether": "^3.0.1",
+    "redux-persist": "^6.0.0",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "web-vitals": "^3.3.1"
@@ -108,7 +109,6 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-in-case": "^1.0.2",
     "next-test-api-route-handler": "^3.1.8",
-    "next-transpile-modules": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
