--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,15 @@
     }
   ],
   "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint",
+    "tailwindcss",
+    "testing-library",
+    "jest-dom"
+  ],
   "ignorePatterns": [
     "jest.config.js",
+    "postcss.config.js",
     "next.config.js",
     "tailwind.config.js",
     "tailwind-workspace-preset.js"
