--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-scale": "^4.0.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
+    "install": "^0.13.0",
     "isomorphic-fetch": "^3.0.0",
     "kaitai-struct": "^0.10.0",
     "maxmind": "^4.3.11",
@@ -49,6 +50,7 @@
     "next-images": "^1.8.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.2.1",
+    "npm": "^9.8.0",
     "path-to-regexp": "^6.2.1",
     "prisma": "^4.14.1",
     "public-ip": "^6.0.1",
@@ -92,12 +94,12 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/request-ip": "^0.0.37",
     "@types/tether": "^1.4.6",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
+    "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest-dom": "^4.0.3",
@@ -122,8 +124,11 @@
     "tailwind-utopia": "github:domchristie/tailwind-utopia",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.6",
     "vite-plugin-svgr": "^3.2.0"
   },
-  "babel": {}
+  "babel": {},
+  "overrides": {
+    "@rushstack/eslint-patch": "^1.3.2"
+  }
 }
