--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-obfuscate": "^3.6.9",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-select-search": "^4.1.6",
     "react-super-responsive-table": "^5.2.1",
@@ -90,6 +91,7 @@
     "@types/react": "18.2.7",
     "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "18.2.4",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "@types/request-ip": "^0.0.37",
