--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-hook/resize-observer": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
+    "@types/react-scroll": "^1.8.7",
     "animejs": "^3.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -64,6 +65,7 @@
     "react-obfuscate": "^3.6.9",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "react-select-search": "^4.1.6",
     "react-super-responsive-table": "^5.2.1",
     "react-tether": "^3.0.1",
