--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DBHOST=localhost
-DBPORT=5432
-DBUSER=postgres
-DBPASSWORD=postgres
-DATABASE=crackq.me
-
+DB_URL=mysql://crackq:crackq@localhost:3306/crackq.me
+CFSECRET_KEY=2x0000000000000000000000000000000AA
+NEXT_PUBLIC_CFSITE_KEY=1x00000000000000000000AA
+CRACKQ_API=http://localhost:5000/
