--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DB_URL=mysql://crackq:crackq@localhost:3306/crackq.me
 CFSECRET_KEY=2x0000000000000000000000000000000AA
 NEXT_PUBLIC_CFSITE_KEY=1x00000000000000000000AA
 CRACKQ_API=http://localhost:5000/
+SECRET_COOKIE_PASSWORD=GDCN6VV7ZVJELQRIWALANDYGMYUGDX7HBR3R3IENAKFJHJNPLZ4A====
