--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "install": "^0.13.0",
+    "iron-session": "^6.3.1",
     "isomorphic-fetch": "^3.0.0",
     "kaitai-struct": "^0.10.0",
     "maxmind": "^4.3.11",
