--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "import-notation": null,
+    "selector-class-pattern": null,
     "scss/dollar-variable-colon-space-before": null,
     "scss/no-global-function-names": null,
     "at-rule-empty-line-before": null,
