add next_privacy_mode_price variable

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ CFSECRET_KEY=2x0000000000000000000000000000000AA
 NEXT_PUBLIC_CFSITE_KEY=1x00000000000000000000AA
 CRACKQ_API=http://localhost:5000/
 SECRET_COOKIE_PASSWORD=GDCN6VV7ZVJELQRIWALANDYGMYUGDX7HBR3R3IENAKFJHJNPLZ4A====
+NEXT_PUBLIC_Privacy_Mode_Price=0.0005BTC
