update env to also set db_provider

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DB_URL=mysql://crackq:crackq@localhost:3306/crackq.me
+DATABASE_URL=postgres://crackq:crackq@localhost:3306/crackq.me
+DATABASE_PROVIDER=postgresql
 CFSECRET_KEY=2x0000000000000000000000000000000AA
 NEXT_PUBLIC_CFSITE_KEY=1x00000000000000000000AA
 CRACKQ_API=http://localhost:5000/
