--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@patternfly/react-styles": "^4.92.6",
     "@patternfly/react-table": "^4.113.0",
     "@previewjs/config-helper-nextjs": "^1.0.20",
+    "@prisma/client": "^5.3.0",
     "@react-hook/resize-observer": "^1.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@resvg/resvg-js": "^2.4.1",
@@ -56,7 +57,6 @@
     "next-themes": "^0.2.1",
     "npm": "^9.8.0",
     "path-to-regexp": "^6.2.1",
-    "prisma": "^4.14.1",
     "public-ip": "^6.0.1",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
@@ -123,6 +123,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^5.3.0",
     "react-test-renderer": "^18.2.0",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
