--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.6",
+    "utility-types": "^3.10.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "babel": {},
