--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-themes": "^0.2.1",
     "npm": "^9.8.0",
     "path-to-regexp": "^6.2.1",
+    "prismock": "^1.21.1",
     "public-ip": "^6.0.1",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
