--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "redux-persist": "^6.0.0",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
+    "uint8-to-utf16": "github:WebReflection/uint8-to-utf16",
     "ulidx": "^2.1.0",
     "web-vitals": "^3.3.1"
   },
